在lint使用前保存

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+
+    <string name="sweep">扫一扫</string>
+    <string name="search_hint">输入关键字搜索</string>
+    <string name="message">消息</string>
 </resources>
